# ByteLock

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.txt  installer.nsi
resources/: app.rc  icons.qrc  resources.qrc
resources/pairing/: pair.html  recover.html
src/: LocalPairingServer.cpp  LocalPairingServer.h  MasterConfig.cpp  MasterConfig.h  MobilePairing.cpp  MobilePairing.h  PairingDialog.cpp  PairingDialog.h  PasswordPromptDialog.cpp  PasswordPromptDialog.h  RecoveryDialog.cpp  RecoveryDialog.h  SettingsDialog.cpp  SettingsDialog.h  SetupDialog.cpp  SetupDialog.h  WelcomeGuideDialog.cpp  WelcomeGuideDialog.h  main.cpp  pairing.qrc
src/engine/: CryptoEngine.cpp  CryptoEngine.h  DefaultPasswordStore.cpp  DefaultPasswordStore.h  FolderPacker.cpp  FolderPacker.h  Result.h  SecureBytes.h
src/fs/: FsCrypto.cpp  FsCrypto.h  PassthroughFs.cpp
src/persistence/: FolderRegistry.cpp  FolderRegistry.h
src/ui/: AboutPage.cpp  AboutPage.h  AuthGateDialog.cpp  AuthGateDialog.h  DashboardPage.cpp  DashboardPage.h  IconUtils.cpp  IconUtils.h  MainWindow.cpp  MainWindow.h  PasswordLineEdit.cpp  PasswordLineEdit.h  SettingsPage.cpp  SettingsPage.h  Sidebar.cpp  Sidebar.h  TitleBar.cpp  TitleBar.h
src/viewmodel/: MainViewModel.cpp  MainViewModel.h
